tests/invalid/const_logic.lang
const a: bool = true && false;
